<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OHWR</string>
    <string name="User_info_activity">UserInfo</string>
    <string name="consonant_chooser">Select an vowel</string>
    <string name="vowel_chooser">Select a consonant</string>
    <string name="Mode_info_activity">ModeInfo</string>
    <string name="Class_info_activity">ClassInfo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="start_new">New</string>
	<string name="brush">Brush</string>
	<string name="erase">Erase</string>
	<string name="save">Save</string>
	<string name="clear">Clear</string>
	<string name="character">Character</string>
	<string name="paint">Paint</string>
	<string name="sml">Small</string>
	<string name="med">Medium</string>
	<string name="lrg">Large</string>
	<string name="name">Name</string>
	<string name="enter_name">Enter your name here</string>
	<string name="enter_string">Enter</string>
	<string name="age">Age</string>
	<string name="enter_age">Enter your age</string>
	<string name="gender">Gender</string>
	<string name="enter_gender">Enter your gender</string>
	<string name="region">Region</string>
	<string name="enter_region">Enter your region</string>
	<string name="date">Date</string>
	<string name="enter_date">date-month-year</string>
	<string name="day">Day</string>
	<string name="month">Month</string>
	<string name="year">Year</string>
	<string name="education">Education</string>
	<string name="enter_education">Enter education level</string>
	<string name="profession">Profession</string>
	<string name="enter_profession">Enter profession</string>
	<string name="hand">Hand</string>
	<string name="enter_hand">Right or left handed</string>
	<string name="vowels">Vowels</string>
	<string name="consonants">Consonants</string>
	<string name="display_character">You are going to write this character</string>
	<string name="addClass">Add class</string>
	<string name="collectdata">Collect Data</string>
	<string name="class_name">Name of the class</string>
	<string name="enter_class_name">Enter the class name here</string>
	<string name="ok_string">OK</string>
	<string name="english">English</string>
	<string name="telugu">Telugu</string>
	<string name="hindi">Hindi</string>
	<string name="englishNumerals">English Numerals</string>
	<string name="kannada">Kannada</string>
	<string name="prev">Prev</string>
	<string name="curr">Curr</string>
	<string name="next">Next</string>
	<string name="place_holder">Name</string>
	<string name="edit_string">Edit</string>
	<string name="class_symbol">C</string>
	<string name="data_symbol">D</string>
	
</resources>
