<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
   	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_gravity="left"
	    android:orientation="horizontal" >
	
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:text="@string/name" />
	
	    <EditText
	        android:id="@+id/name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_name" >
	
	        <requestFocus />
	    </EditText>
    </LinearLayout>
    
   	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_gravity="left"
	    android:orientation="horizontal" >
	
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:text="@string/age" />
	
	    <EditText
	        android:id="@+id/age"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_age" >
	
	        <requestFocus />
	    </EditText>
    </LinearLayout>
    
   	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_gravity="left"
	    android:orientation="horizontal" >
	
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:text="@string/gender" />
	
	    <EditText
	        android:id="@+id/gender"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_gender" >
	
	        <requestFocus />
	    </EditText>
    </LinearLayout>   	   	

   	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_gravity="left"
	    android:orientation="horizontal" >
	
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:text="@string/region" />
	
	    <EditText
	        android:id="@+id/region"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_region" >
	
	        <requestFocus />
	    </EditText>
    </LinearLayout>   	
    
   	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_gravity="left"
	    android:orientation="horizontal" >
	
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:text="@string/date" />
	
	    <EditText
	        android:id="@+id/date"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_date" >
	        <requestFocus />
        </EditText>
        
	</LinearLayout>   	
	
   	   	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_gravity="left"
	    android:orientation="horizontal" >
	
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:text="@string/education" />
	
	    <EditText
	        android:id="@+id/education"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_education" >
	        <requestFocus />
        </EditText>
	</LinearLayout>   	
	
   	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_gravity="left"
	    android:orientation="horizontal" >
		
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:text="@string/profession" />
	
	    <EditText
	        android:id="@+id/profession"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_profession" >
	        <requestFocus />
        </EditText>
	</LinearLayout>   	   	   	
	
   	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_gravity="left"
	    android:orientation="horizontal" >
		
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:text="@string/hand" />
	
	    <EditText
	        android:id="@+id/hand"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_hand" >
	        <requestFocus />
        </EditText>
	</LinearLayout>   	   	   	   	
    
    <Button
        android:id="@+id/enter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_string" />

</LinearLayout>