<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
    
    <Button
        android:id="@+id/telugu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telugu" />
    <Button
        android:id="@+id/hindi_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hindi" />
    <Button
        android:id="@+id/english_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/english" />
    <Button
        android:id="@+id/english_numerals_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/englishNumerals" /> 	
    <Button
        android:id="@+id/kannada_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kannada" />
</LinearLayout>