<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
   	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_gravity="left"
	    android:orientation="horizontal" >
	
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:text="@string/class_name" />
	
	    <EditText
	        android:id="@+id/class_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/enter_class_name" >
	
	        <requestFocus />
	    </EditText>
    </LinearLayout>
    
    
    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_string" />

</LinearLayout>