<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_gravity="center"
	    android:orientation="horizontal" >
	    <ImageButton
		    android:id="@+id/new_btn1"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:contentDescription="@string/start_new"
		    android:src="@drawable/new_pic" />
	    <ImageButton
		    android:id="@+id/draw_btn1"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:contentDescription="@string/brush"
		    android:src="@drawable/brush" />
	    <ImageButton
		    android:id="@+id/erase_btn1"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:contentDescription="@string/erase"
		    android:src="@drawable/eraser" />
	    <ImageButton
		    android:id="@+id/save_btn1"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:contentDescription="@string/save"
		    android:src="@drawable/save" />

	    <ImageButton
		    android:id="@+id/character_btn1"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:contentDescription="@string/character"
		    android:src="@drawable/save" />
	</LinearLayout>

	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_gravity="center"
	    android:orientation="horizontal" >
	    <ImageButton
		    android:id="@+id/new_btn2"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:contentDescription="@string/start_new"
		    android:src="@drawable/new_pic" />
	    <ImageButton
		    android:id="@+id/draw_btn2"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:contentDescription="@string/brush"
		    android:src="@drawable/brush" />
	    <ImageButton
		    android:id="@+id/erase_btn2"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:contentDescription="@string/erase"
		    android:src="@drawable/eraser" />
	    <ImageButton
		    android:id="@+id/save_btn2"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:contentDescription="@string/save"
		    android:src="@drawable/save" />

	    <ImageButton
		    android:id="@+id/character_btn2"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:contentDescription="@string/character"
		    android:src="@drawable/save" />
	</LinearLayout>	
	
</LinearLayout>

